fix node Link, add z-index on gallery

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,6 +13,7 @@
 .navbar {
   padding: 0 20px;
   margin-bottom: 30px;
+  z-index: 1;
 }
 .navbar-brand {
   align-items: center;
